--- a/src/Mapbender/WmsBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.en.xlf
@@ -482,6 +482,34 @@
         <source>mb.wms.wmsloader.repo.instancelayer.btn.save</source>
         <target>Save</target>
       </trans-unit>
+      <trans-unit id="c6135b9db60a93807e1ce11155d4856a" resname="mb.wms.wmsloader.class.title">
+        <source>mb.wms.wmsloader.class.title</source>
+        <target>WMS loader</target>
+      </trans-unit>
+      <trans-unit id="10a9e19b4afe3b0e70d32737e00b9bb1" resname="mb.wms.wmsloader.class.description">
+        <source>mb.wms.wmsloader.class.description</source>
+        <target>Loads a WMS via the getCapabilities-Request</target>
+      </trans-unit>
+      <trans-unit id="aa2a35216121de6e6cd0ac492ab73f84" resname="mb.wms.wmsloader.tag.wms">
+        <source>mb.wms.wmsloader.tag.wms</source>
+        <target>wms</target>
+      </trans-unit>
+      <trans-unit id="251b3fbc58d81e13d4f5e3d8d79868a1" resname="mb.wms.wmsloader.tag.loader">
+        <source>mb.wms.wmsloader.tag.loader</source>
+        <target>loader</target>
+      </trans-unit>
+      <trans-unit id="a3c1e614645662978d87b127212a82e1" resname="mb.wms.wmsloader.admin.label.autoopen">
+        <source>mb.wms.wmsloader.admin.label.autoopen</source>
+        <target>Auto open</target>
+      </trans-unit>
+      <trans-unit id="b52292e296196443736339f392fa4ee2" resname="mb.wms.wmsloader.admin.label.splitlayers">
+        <source>mb.wms.wmsloader.admin.label.splitlayers</source>
+        <target>Split layers</target>
+      </trans-unit>
+      <trans-unit id="83f8e03b200eabe5ef5297192f50f595" resname="mb.wms.wmsloader.admin.label.declarative">
+        <source>mb.wms.wmsloader.admin.label.declarative</source>
+        <target>Use declarative</target>
+      </trans-unit>
       <trans-unit id="b729aa4bd78553ddc93e54a88f74f565" resname="mb.wmc.wmsloader.class.title">
         <source>mb.wmc.wmsloader.class.title</source>
         <target>Wms Loader</target>
@@ -497,18 +525,6 @@
       <trans-unit id="508990e1bc263600c38cac2a878e5403" resname="mb.wmc.wmsloader.tag.loader">
         <source>mb.wmc.wmsloader.tag.loader</source>
         <target>loader</target>
-      </trans-unit>
-      <trans-unit id="a3c1e614645662978d87b127212a82e1" resname="mb.wms.wmsloader.admin.label.autoopen">
-        <source>mb.wms.wmsloader.admin.label.autoopen</source>
-        <target>Auto open</target>
-      </trans-unit>
-      <trans-unit id="b52292e296196443736339f392fa4ee2" resname="mb.wms.wmsloader.admin.label.splitlayers">
-        <source>mb.wms.wmsloader.admin.label.splitlayers</source>
-        <target>Split layers</target>
-      </trans-unit>
-      <trans-unit id="83f8e03b200eabe5ef5297192f50f595" resname="mb.wms.wmsloader.admin.label.declarative">
-        <source>mb.wms.wmsloader.admin.label.declarative</source>
-        <target>Use declarative</target>
       </trans-unit>
     </body>
   </file>
