--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -30,6 +30,10 @@
         <source>mb.core.poi.text.snippet</source>
         <target>Sie können den folgenden Textbaustein in einer E-Mail nutzen, um den POI zu teilen.</target>
       </trans-unit>
+      <trans-unit id="f123690a3603fb7e32cfb02774f84512" resname="mb.core.legend.nolegend">
+        <source>mb.core.legend.nolegend</source>
+        <target>No legend available</target>
+      </trans-unit>
       <trans-unit id="8411d94dea29828997130d6346ad0777" resname="mb.core.printclient.label.template">
         <source>mb.core.printclient.label.template</source>
         <target>Template</target>
@@ -45,6 +49,10 @@
       <trans-unit id="1d6b0cb565c46ffb069608c564861358" resname="mb.core.printclient.label.rotation">
         <source>mb.core.printclient.label.rotation</source>
         <target>Rotation</target>
+      </trans-unit>
+      <trans-unit id="c6c2daa6191922b3b1d289aae1ec8f31" resname="mb.core.overview.nolayer">
+        <source>mb.core.overview.nolayer</source>
+        <target>The overview element has no layer.</target>
       </trans-unit>
       <trans-unit id="52f2119c302dee02a460f03b9ef78cf2" resname="mb.core.sketch.circle.radius.label">
         <source>mb.core.sketch.circle.radius.label</source>
@@ -173,6 +181,218 @@
       <trans-unit id="937de90c8cbe2cbfca37e4df0c18b6aa" resname="mb.core.layertree.label.deleteallsources">
         <source>mb.core.layertree.label.deleteallsources</source>
         <target>Alle Quellen entfernen</target>
+      </trans-unit>
+      <trans-unit id="2ec03c5c014dec42d2bc46c9cf012215" resname="mb.core.aboutdialog.class.title">
+        <source>mb.core.aboutdialog.class.title</source>
+        <target>About dialog</target>
+      </trans-unit>
+      <trans-unit id="a1fe1182d0efa70a68e07d8375db34ce" resname="mb.core.aboutdialog.class.description">
+        <source>mb.core.aboutdialog.class.description</source>
+        <target>Shows a about dialog</target>
+      </trans-unit>
+      <trans-unit id="cb1d0ceba4aa38a8a623c339903c7b71" resname="mb.core.aboutdialog.tag.help">
+        <source>mb.core.aboutdialog.tag.help</source>
+        <target>help</target>
+      </trans-unit>
+      <trans-unit id="c02738e437b4048f9b434d851d1e1a3f" resname="mb.core.aboutdialog.tag.info">
+        <source>mb.core.aboutdialog.tag.info</source>
+        <target>info</target>
+      </trans-unit>
+      <trans-unit id="80a2c08826a2379b7239f4e9c581805e" resname="mb.core.aboutdialog.tag.about">
+        <source>mb.core.aboutdialog.tag.about</source>
+        <target>about</target>
+      </trans-unit>
+      <trans-unit id="befc1f8d20bbd1ba5f26e124d8b94f1a" resname="mb.core.activityindicator.class.title">
+        <source>mb.core.activityindicator.class.title</source>
+        <target>Activitiy indicator</target>
+      </trans-unit>
+      <trans-unit id="4c68bd109de1a07d8c03455e938af4d9" resname="mb.core.activityindicator.class.description">
+        <source>mb.core.activityindicator.class.description</source>
+        <target>Shows HTTP activity</target>
+      </trans-unit>
+      <trans-unit id="fd918578edd7d0cca263c511c5aa5d1e" resname="mb.core.activityindicator.tag.activity">
+        <source>mb.core.activityindicator.tag.activity</source>
+        <target>activity</target>
+      </trans-unit>
+      <trans-unit id="bb2ea876407e337655b44710c250006a" resname="mb.core.activityindicator.tag.indicator">
+        <source>mb.core.activityindicator.tag.indicator</source>
+        <target>indicator</target>
+      </trans-unit>
+      <trans-unit id="1b2f36a63d291efb8bc41dabbd6917a8" resname="mb.core.button.class.title">
+        <source>mb.core.button.class.title</source>
+        <target>Button</target>
+      </trans-unit>
+      <trans-unit id="2c4223a6c0c9581d0a621696c7420a64" resname="mb.core.button.class.description">
+        <source>mb.core.button.class.description</source>
+        <target>Button </target>
+      </trans-unit>
+      <trans-unit id="28b6501d35cb5022d2f1a5ffa6c46b0a" resname="mb.core.button.tag.button">
+        <source>mb.core.button.tag.button</source>
+        <target>button</target>
+      </trans-unit>
+      <trans-unit id="9c1ccf262204218acfe9d7d4531efdb5" resname="mb.core.coordinatesdisplay.class.title">
+        <source>mb.core.coordinatesdisplay.class.title</source>
+        <target>Coordinates display</target>
+      </trans-unit>
+      <trans-unit id="cee2d354d34004657e8a450d251585dc" resname="mb.core.coordinatesdisplay.class.description">
+        <source>mb.core.coordinatesdisplay.class.description</source>
+        <target>The coordinates display shows your mouse position in map coordinates.</target>
+      </trans-unit>
+      <trans-unit id="eab1a6ab1b72d1da761177f459e3f5ed" resname="mb.core.coordinatesdisplay.tag.coordinates">
+        <source>mb.core.coordinatesdisplay.tag.coordinates</source>
+        <target>coordinates</target>
+      </trans-unit>
+      <trans-unit id="ff24de9e7a96cd53867af20168d49ebd" resname="mb.core.coordinatesdisplay.tag.display">
+        <source>mb.core.coordinatesdisplay.tag.display</source>
+        <target>display</target>
+      </trans-unit>
+      <trans-unit id="651e9b111a6dd5b2050eb314a88df0d5" resname="mb.core.coordinatesdisplay.tag.mouse">
+        <source>mb.core.coordinatesdisplay.tag.mouse</source>
+        <target>mouse</target>
+      </trans-unit>
+      <trans-unit id="9d31d5498141043d830d3bcf7b338987" resname="mb.core.coordinatesdisplay.tag.position">
+        <source>mb.core.coordinatesdisplay.tag.position</source>
+        <target>position</target>
+      </trans-unit>
+      <trans-unit id="788b3224b624aa4530d43991cedc9ced" resname="mb.core.copyright.class.title">
+        <source>mb.core.copyright.class.title</source>
+        <target>Copyright</target>
+      </trans-unit>
+      <trans-unit id="785b8e73415635049ccda83324dabdd4" resname="mb.core.copyright.class.description">
+        <source>mb.core.copyright.class.description</source>
+        <target>Shows terms of use</target>
+      </trans-unit>
+      <trans-unit id="edd9a51254ed3282c94086cb82181c4b" resname="mb.core.copyright.tag.copyright">
+        <source>mb.core.copyright.tag.copyright</source>
+        <target>copyright</target>
+      </trans-unit>
+      <trans-unit id="8f0414b7eb120282a4e0086e674e03bb" resname="mb.core.copyright.tag.dialog">
+        <source>mb.core.copyright.tag.dialog</source>
+        <target>dialog</target>
+      </trans-unit>
+      <trans-unit id="5d2843de110ec9bc967ddcbdafed4b04" resname="mb.core.featureinfo.class.title">
+        <source>mb.core.featureinfo.class.title</source>
+        <target>FeatureInfo</target>
+      </trans-unit>
+      <trans-unit id="2b611c8cacca06828c4da13b84e8caf3" resname="mb.core.featureinfo.class.description">
+        <source>mb.core.featureinfo.class.description</source>
+        <target>Feature info</target>
+      </trans-unit>
+      <trans-unit id="a7a27b022bb1c74647c76562bc2bca92" resname="mb.core.featureinfo.tag.featureinfo">
+        <source>mb.core.featureinfo.tag.featureinfo</source>
+        <target>featureinfo</target>
+      </trans-unit>
+      <trans-unit id="84265e0b65d9180071e2d8be52ff266d" resname="mb.core.featureinfo.tag.feature">
+        <source>mb.core.featureinfo.tag.feature</source>
+        <target>feature</target>
+      </trans-unit>
+      <trans-unit id="4ca1e715fc760a219401f2b0bc8ec66d" resname="mb.core.featureinfo.tag.info">
+        <source>mb.core.featureinfo.tag.info</source>
+        <target>info</target>
+      </trans-unit>
+      <trans-unit id="466f3c57656eccfdff2975c40964f72a" resname="mb.core.featureinfo.tag.dialog">
+        <source>mb.core.featureinfo.tag.dialog</source>
+        <target>dialog</target>
+      </trans-unit>
+      <trans-unit id="6b752500265cd713262d3ac40782289e" resname="mb.core.gpsposition.class.title">
+        <source>mb.core.gpsposition.class.title</source>
+        <target>GPS-Position</target>
+      </trans-unit>
+      <trans-unit id="1ad088a7f936e3e8a90a2c668adb0393" resname="mb.core.gpsposition.class.description">
+        <source>mb.core.gpsposition.class.description</source>
+        <target>Renders a button to show the GPS-Position</target>
+      </trans-unit>
+      <trans-unit id="63927352ea1d9602ea2d39950657b022" resname="mb.core.gpsposition.tag.gpsposition">
+        <source>mb.core.gpsposition.tag.gpsposition</source>
+        <target>gpsposition</target>
+      </trans-unit>
+      <trans-unit id="1e4a324bb1c86559e915eeae664f16ca" resname="mb.core.gpsposition.tag.gps">
+        <source>mb.core.gpsposition.tag.gps</source>
+        <target>gps</target>
+      </trans-unit>
+      <trans-unit id="b7770cbd87d28b8cc56cf8692909971a" resname="mb.core.gpsposition.tag.position">
+        <source>mb.core.gpsposition.tag.position</source>
+        <target>position</target>
+      </trans-unit>
+      <trans-unit id="9a2760ef9a6ef1a36a78fc130f3e4dc2" resname="mb.core.gpsposition.tag.button">
+        <source>mb.core.gpsposition.tag.button</source>
+        <target>button</target>
+      </trans-unit>
+      <trans-unit id="91c4794eb87858c6ea0a7f736ffc31d5" resname="mb.core.layertree.class.title">
+        <source>mb.core.layertree.class.title</source>
+        <target>Layer tree</target>
+      </trans-unit>
+      <trans-unit id="ef9d6ec32821b43276bd1a3777a7d83c" resname="mb.core.layertree.class.description">
+        <source>mb.core.layertree.class.description</source>
+        <target>Tree of map's layers</target>
+      </trans-unit>
+      <trans-unit id="6887daa52d3a65065194eae2ddb59766" resname="mb.core.layertree.tag.layertree">
+        <source>mb.core.layertree.tag.layertree</source>
+        <target>layertree</target>
+      </trans-unit>
+      <trans-unit id="fa5d8e4f7cddffeb22ee18ed267e20bc" resname="mb.core.layertree.tag.layer">
+        <source>mb.core.layertree.tag.layer</source>
+        <target>layer</target>
+      </trans-unit>
+      <trans-unit id="261c2591eda9e2e2f29c5cdc3da88f7d" resname="mb.core.layertree.tag.tree">
+        <source>mb.core.layertree.tag.tree</source>
+        <target>tree</target>
+      </trans-unit>
+      <trans-unit id="0e414a98c26c7e55a83bae397b5faf8d" resname="mb.core.legend.class.title">
+        <source>mb.core.legend.class.title</source>
+        <target>Legende</target>
+      </trans-unit>
+      <trans-unit id="c6b4222c59ccebdcc9c399ed4e0a8169" resname="mb.core.legend.class.description">
+        <source>mb.core.legend.class.description</source>
+        <target>The legend shows the legend of the map's layers</target>
+      </trans-unit>
+      <trans-unit id="bc4dbd2f4a17fa2486f8c153b2785959" resname="mb.core.legend.tag.layer">
+        <source>mb.core.legend.tag.layer</source>
+        <target>layer</target>
+      </trans-unit>
+      <trans-unit id="3a1ad035c9ded1d5f15ad139a3180479" resname="mb.core.legend.tag.legend">
+        <source>mb.core.legend.tag.legend</source>
+        <target>legend</target>
+      </trans-unit>
+      <trans-unit id="6ff9a6860becdb38fc62382a5a94d19f" resname="mb.core.map.class.title">
+        <source>mb.core.map.class.title</source>
+        <target>Map</target>
+      </trans-unit>
+      <trans-unit id="a51d63e59c7008d6fc19ae6fd66e0034" resname="mb.core.mapabs.class.description">
+        <source>mb.core.mapabs.class.description</source>
+        <target>MapQuery/OpenLayers based map</target>
+      </trans-unit>
+      <trans-unit id="62a123effedc924f13f9f73b303a159e" resname="mb.core.map.tag.map">
+        <source>mb.core.map.tag.map</source>
+        <target>map</target>
+      </trans-unit>
+      <trans-unit id="5b354e24e317b47d82b91e5fb901398e" resname="mb.core.map.tag.mapquery">
+        <source>mb.core.map.tag.mapquery</source>
+        <target>mapquery</target>
+      </trans-unit>
+      <trans-unit id="be27b82e95734992bbcd31c4faad6251" resname="mb.core.map.tag.openlayers">
+        <source>mb.core.map.tag.openlayers</source>
+        <target>openlayers</target>
+      </trans-unit>
+      <trans-unit id="4b943baa1ecd120693a0169188869129" resname="mb.core.map.srsnotfound">
+        <source>mb.core.map.srsnotfound</source>
+        <target>SRS properties for %srslist% are not found</target>
+      </trans-unit>
+      <trans-unit id="1545d3b3b00b2d6a9ffa64836e72cf89" resname="mb.core.overview.class.title">
+        <source>mb.core.overview.class.title</source>
+        <target>Overview</target>
+      </trans-unit>
+      <trans-unit id="4a541e9cb0bbec61e67b6410c5d91bfd" resname="mb.core.overview.class.description">
+        <source>mb.core.overview.class.description</source>
+        <target>Renders a small overview map</target>
+      </trans-unit>
+      <trans-unit id="e5d9eb4a51009c1523e241487f33efb0" resname="mb.core.overview.tag.overview">
+        <source>mb.core.overview.tag.overview</source>
+        <target>overview</target>
+      </trans-unit>
+      <trans-unit id="bb3d9d93dcc6f6dabc4d558e5a9f4222" resname="mb.core.overview.tag.map">
+        <source>mb.core.overview.tag.map</source>
+        <target>map</target>
       </trans-unit>
       <trans-unit id="d7bb1cd5c3550424b7fa9a49d70fadc9" resname="mb.core.admin.legend.label.autoopen">
         <source>mb.core.admin.legend.label.autoopen</source>
