--- a/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
@@ -40,15 +40,15 @@
       </trans-unit>
       <trans-unit id="a0b566abaccf9a7b4c3e8d7a45660c4f" resname="mb.wms.source.image_error.datails">
         <source>mb.wms.source.image_error.datails</source>
-        <target>The map cannot be displayed.</target>
+        <target>Die Karte kann nicht angezeigt werden.</target>
       </trans-unit>
       <trans-unit id="04541f44b11f3f7128ed8f4fac7874a7" resname="mb.wms.source.image_error.exception">
         <source>mb.wms.source.image_error.exception</source>
-        <target>Exception: %exception%</target>
+        <target>Ausnahmefehler: %exception%</target>
       </trans-unit>
       <trans-unit id="e162f0ce53da6cde57332698cb2e8f4d" resname="mb.wms.source.image_error.statuscode">
         <source>mb.wms.source.image_error.statuscode</source>
-        <target>HTTP status code</target>
+        <target>HTTP Statuscode</target>
       </trans-unit>
       <trans-unit id="14e320f4ad6e5b780163ba845dbf3d4e" resname="mb.wms.wmsloader.repo.macros.label.formats">
         <source>mb.wms.wmsloader.repo.macros.label.formats</source>
