--- a/src/Mapbender/WmcBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/WmcBundle/Resources/translations/messages.en.xlf
@@ -220,7 +220,7 @@
       </trans-unit>
       <trans-unit id="eb6f1e211f0c4fce0cb4e847844a7ca0" resname="mb.wmc.wmcloader.class.description">
         <source>mb.wmc.wmcloader.class.description</source>
-        <target>__mb.wmc.wmcloader.class.description</target>
+        <target>WMC loader description</target>
       </trans-unit>
       <trans-unit id="fa367490fe08a5c455c902eb5714abe4" resname="mb.wmc.wmcloader.tag.wmc">
         <source>mb.wmc.wmcloader.tag.wmc</source>
